# optional_tasks

./: .gitignore  README.md  setup.cfg
optional_tasks/: __main__.py  models.py
optional_tasks/actions/: add.py  add_skill.py  add_task.py  do.py  list.py  list_skill.py  list_task.py
optional_tasks/models/: base_model.py  skill.py  skills.py  task.py  tasks.py
tests/: test_core.py
ultimate_todo_list/: __main__.py  models.py
ultimate_todo_list/actions/: action.py  add.py  do.py  list.py
