[metadata]
name = optional_tasks
version = 0.2.0 
description = todo-like cli application focused on regular, equal and parallel completion of different tasks without using due dates
long_description = file: README.md
long_description_content_type = text/markdown
url = https://codeberg.org/houjuunue/optional_tasks
author = nikohonu
author_email = nikohonu@gmail.com
license = GPLv3
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
packages =
    optional_tasks
    optional_tasks.actions
    optional_tasks.models
install_requires = file: requirements.txt

[options.entry_points]
console_scripts =
    optional_tasks = optional_tasks.__main__:main
