[metadata]
name = ultimate_todo_list
version = 0.3.0 
description = todo-like cli application focused on regular, equal and parallel completion of different tasks with and without using due dates
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nikohonu/ultimate_todo_list
author = nikohonu
author_email = nikohonu@gmail.com
license = GPLv3
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
packages =
    ultimate_todo_list
    ultimate_todo_list.actions
    ultimate_todo_list.models
install_requires = file: requirements.txt

[options.entry_points]
console_scripts =
    ultimate_todo_list = ultimate_todo_list.__main__:main
